# tree-sitter-feral

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-feral.pc.in
bindings/c/tree_sitter/: tree-sitter-feral.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_feral/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFeralTests/: TreeSitterFeralTests.swift
queries/: highlights.scm  locals.scm  tags.scm
queries/feral/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
