[package]
name = "tree-sitter-feral"
description = "Tree sitter parser for the Feral programming implementation"
version = "0.1.0"
authors = ["Elec <feral@mail.electrux.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "feral"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/feral-lang/tree-sitter-feral"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
